--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
     </head>
     <body>
-        <h1>Welcome to the world of branches!</h1>
+        <h1>Welcome to the world of branches! It's awesome.</h1>
     </body>
 </html>
